# color2obj

./: .gitignore  README.md  run_image_processing.sh
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/include/my_cpp_pkg/: object_mapping.hpp
src/my_cpp_pkg/launch/: obj_mapping.launch.py
src/my_cpp_pkg/resource/: object_table.yaml
src/my_cpp_pkg/src/: image_processing.cpp  my_first_node.cpp  object_mapping.cpp  object_mapping_node.cpp
